--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "async": "^2.0.1",
     "express": "^4.14.0",
     "jade": "^1.11.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^6.1.2",
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-config-scality": "scality/Guidelines"
   }
 }
